--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.12.1",
     "react-slick": "^0.29.0"
   },
