--- a/package.json
+++ b/package.json
@@ -11,6 +11,18 @@
   "author": "prs-dev",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cloudinary": "^1.37.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "indian-astrology": "^1.0.4",
+    "instamojo-nodejs": "^0.0.5",
+    "mongoose": "^7.3.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
+    "react-toastify": "^9.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
